use /usr/src as basedir; more FHS compatible

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
 	server_name eventum;
 	listen 80;
 
-	root /src/eventum/htdocs;
+	root /usr/src/eventum/htdocs;
 	index index.php;
 
 	location ~ ^/.+\.php(/|$) {
