--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
   eventum:
     image: eventum
     volumes:
-      - code-3.1.4:/src/eventum
-      - config:/src/eventum/config
+      - code-3.1.4:/usr/src/eventum
+      - config:/usr/src/eventum/config
     links:
       - mysql
 
@@ -29,6 +29,6 @@ services:
     links:
       - eventum:fpm
     volumes:
-      - code-3.1.4:/src/eventum:ro
+      - code-3.1.4:/usr/src/eventum:ro
 
 # vim:ts=2:sw=2:et
