upate nginx config from docs
https://www.nginx.com/resources/wiki/start/topics/tutorials/config_pitfalls/

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,9 +5,13 @@ server {
 	root /usr/src/eventum/htdocs;
 	index index.php;
 
-	location ~ ^/.+\.php(/|$) {
-		fastcgi_pass fpm:9000;
+	location / {
+		try_files $uri $uri/ /index.php;
+	}
+
+	location ~ \.php$ {
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_pass fpm:9000;
 	}
 }
