use named volumes available from 2.1 format
https://docs.docker.com/compose/compose-file/compose-file-v2/#name-

This requires Docker Engine version 1.12.0+ and Compose 1.9.0+.
https://docs.docker.com/compose/compose-file/compose-versioning/#version-21

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
-version: "2"
+version: '2.1'
 
 volumes:
-  code-3.3.3:
   config:
   mysql:
+  code:
+    name: eventum-3.3.3
 
 services:
   eventum:
     image: eventum/eventum:3.3.3
     volumes:
-      - code-3.3.3:/usr/src/eventum
+      - code:/usr/src/eventum
       - config:/usr/src/eventum/config
     links:
       - mysql
@@ -29,6 +30,6 @@ services:
     links:
       - eventum:fpm
     volumes:
-      - code-3.3.3:/usr/src/eventum:ro
+      - code:/usr/src/eventum:ro
 
 # vim:ts=2:sw=2:et
