--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,14 @@
 version: '2.1'
 
-volumes:
-  config:
-  mysql:
-  code:
-    name: eventum-3.3.3
-
 services:
   eventum:
-    image: eventum/eventum:3.3.3
+    build: .
     volumes:
-      - code:/usr/src/eventum
-      - config:/usr/src/eventum/config
-    links:
-      - mysql
+      # share htdocs with nginx container
+      - public:/app/htdocs
 
   mysql:
-    image: mysql:5.6
+    image: percona:5.7
     volumes:
       - mysql:/var/lib/mysql
     environment:
@@ -24,12 +16,15 @@ services:
       - MYSQL_DATABASE=eventum
 
   nginx:
-    build: nginx
+    image: nginx:alpine
     ports:
       - "8088:80"
-    links:
-      - eventum:fpm
     volumes:
-      - code:/usr/src/eventum:ro
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - public:/app/htdocs:ro
+
+volumes:
+  public:
+  mysql:
 
 # vim:ts=2:sw=2:et
