--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
 	server_name eventum;
 	listen 80;
 
-	root /usr/src/eventum/htdocs;
+	root /app/htdocs;
 	index index.php;
 
 	location / {
@@ -12,6 +12,6 @@ server {
 	location ~ \.php$ {
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_pass fpm:9000;
+		fastcgi_pass eventum:9000;
 	}
 }
