--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '2.1'
 
 services:
   eventum:
-    build: .
-    volumes:
-      - ./php.ini:/etc/php/7.1/php.ini
+    image: eventum/eventum:3.7.2
     ports:
       - "8088:80"
     logging:
