add label to mysql volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,7 @@ services:
 
 volumes:
   mysql:
+    labels:
+      - "com.eventum.description=Eventum MySQL Database Volume"
 
 # vim:ts=2:sw=2:et
