--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80 default_server;
 
-    root /var/www/html;
+    root /app/htdocs;
 
     index index.html index.htm index.php;
 
