--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,11 @@ services:
     image: eventum/eventum:3.8.0
     volumes:
       - ./config:/app/config
+      - ./cache:/app/var/cache
+      - ./log:/app/var/log
+      - ./log/nginx:/var/log/nginx
+      - ./log/fpm:/var/log/php/7.1
+      - ./lock:/app/var/lock
     ports:
       - "8088:80"
     logging:
