nginx.conf: compact

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,16 @@
 server {
+    server_name _;
+    root /app/htdocs;
     listen 80 default_server;
     absolute_redirect off;
-
-    root /app/htdocs;
-
-    index index.html index.htm index.php;
-
-    server_name _;
-
+    index index.php;
     charset utf-8;
 
     location = /favicon.ico { log_not_found off; access_log off; }
     location = /robots.txt  { log_not_found off; access_log off; }
 
     location / {
+        # try to serve file directly, fallback to index.php
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
