--- a/php.ini
+++ b/php.ini
@@ -27,4 +27,4 @@ expose_php = Off
 ; If you choose the default files handler, this is the path where the files are
 ; created. See also session_save_path().
 ; https://php.net/session.save-path
-session.save_path = "/var/run/php/session"
+session.save_path = "/app/var/session"
