--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,9 @@ server {
     location ~ \.php$ {
         fastcgi_pass unix:/run/php/php-fpm.sock;
         include fastcgi.conf;
+
+        proxy_buffers 16 16k;
+        proxy_buffer_size 16k;
     }
 
     error_page 404 /index.php;
