Use default server name eventum for nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    server_name _;
+    server_name eventum;
     root /app/htdocs;
     listen 80 default_server;
     absolute_redirect off;
