--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,9 @@ server {
     location ~ ^/(css|debugbar|fonts|images|js)/ {
         try_files $uri =404;
     }
+    location = /chosen-sprite@2x.png {
+        root /app/htdocs/css;
+    }
 
     location ~ \.php$ {
         fastcgi_pass unix:/run/php/php-fpm.sock;
