Setup HOSTNAME and APP_ENV to application

--- a/php-fpm.conf
+++ b/php-fpm.conf
@@ -2,3 +2,8 @@
 
 ; Somewhy setting display_errors in php.ini has no effect for fpm
 php_admin_flag[display_errors] = off
+
+; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
+; the current environment.
+env[HOSTNAME] = $HOSTNAME
+env[APP_ENV] = $APP_ENV
