Enable opcache.preload for php 7.4
- https://symfony.com/blog/new-in-symfony-4-4-preloading-symfony-applications-in-php-7-4

--- a/php.ini
+++ b/php.ini
@@ -28,3 +28,6 @@ expose_php = Off
 ; created. See also session_save_path().
 ; https://php.net/session.save-path
 session.save_path = "/app/var/session"
+
+; https://symfony.com/blog/new-in-symfony-4-4-preloading-symfony-applications-in-php-7-4
+opcache.preload = /app/var/cache/prod/eventumEventum_KernelProdContainer.preload.php
