Add comment about special alias

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ server {
     location ~ ^/(css|debugbar|fonts|images|js)/ {
         try_files $uri =404;
     }
+    # add alias for broken darkreader css processing
     location = /chosen-sprite@2x.png {
         root /app/htdocs/css;
     }
